2008-01-13  Sebastien Pouliot  <sebastien@ximian.com> 

	* DisposableFieldsShouldBeDisposedTest.cs: Add test case for static 
	fields.
	* DisposableTypesShouldHaveFinalizerTest.cs: Add test case for 
	static fields.
	* TypesWithDisposableFieldsShouldBeDisposableTest.cs: Add test 
	cases for structs and static fields.
	* TypesWithNativeFieldsShouldBeDisposableTest.cs: Add test cases 
	for structs and static fields.

2008-01-13  Sebastien Pouliot  <sebastien@ximian.com>

	* DisposableFieldsShouldBeDisposedTest.cs: New. Unit tests by 
	Andreas Noever.
	* DisposableTypesShouldHaveFinalizerTest.cs: New. Unit tests by 
	Andreas Noever.
	* TypesWithDisposableFieldsShouldBeDisposableTest.cs: New. Unit 
	tests by Andreas Noever.
	* TypesWithNativeFieldsShouldBeDisposableTest.cs: New. Unit 
	tests by Andreas Noever.
	* Test.Rules.Design.mdp: Added new tests to MD project file.

2008-01-12  Sebastien Pouliot  <sebastien@ximian.com>

	* AttributeArgumentsShouldHaveAccessorsTest.cs: New. Unit tests from
	Daniel Abramov.

2008-01-05  Sebastien Pouliot  <sebastien@ximian.com>

	* MissingAttributeUsageOnCustomAttributeTest.cs: New. Unit tests 
	from Daniel Abramov.
	* Test.Rules.Design.mdp: Add new unit tests to MonoDevelop 
	project	file.

2008-01-04  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidPublicInstanceFieldsTest.cs: New. Unit tests from Adrian Tsai
	* ConsiderConvertingMethodToPropertyTest.cs: New. Unit tests from 
	Adrian Tsai
	* Test.Rules.Design.mdp: Add new unit tests to MonoDevelop 
	project	file.

2007-12-28  Sebastien Pouliot  <sebastien@ximian.com>

	* MainShouldNotBePublicTest.cs: New. Unit tests from Daniel Abramov.
	* Test.Rules.Design.mdp: Add new unit test to MonoDevelop project 
	file.

2007-12-26  Sebastien Pouliot  <sebastien@ximian.com>

	* AbstractTypesShouldNotHavePublicConstructorsTest.cs: New. Unit tests
	* AvoidEmptyInterfaceTest.cs: New. Unit tests
	* AvoidPropertiesWithoutGetAccessorTest.cs: New. Unit tests