@@ -30,6 +30,8 @@
     <File name="DisposableTypesShouldHaveFinalizerTest.cs" subtype="Code" buildaction="Compile" />
     <File name="TypesWithDisposableFieldsShouldBeDisposableTest.cs" subtype="Code" buildaction="Compile" />
     <File name="TypesWithNativeFieldsShouldBeDisposableTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="FinalizersShouldBeProtectedTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="FinalizersShouldCallBaseClassFinalizerTest.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Assembly" localcopy="True" refto="../../../../lib/Mono.Cecil.dll" />
